--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.MyRuns"
         tools:targetApi="31">
         <activity
+            android:name="com.example.teeya_li.ManualInput"
+            android:exported="false"
+            android:label="@string/title_activity_manual_input"
+            android:theme="@style/Theme.MyRuns" />
+        <activity
             android:name="com.example.teeya_li.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
@@ -32,6 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.teeya_li.MapActivity"
+            android:label="MapActivity"></activity>
     </application>
 
 </manifest>
