--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </activity>
         <activity
             android:name="com.example.teeya_li.UserProfile"
-            android:exported="true">
+            android:exported="true"
+            android:label="User Profile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,7 +40,7 @@
         </activity>
         <activity
             android:name="com.example.teeya_li.MapActivity"
-            android:label="MapActivity"></activity>
+            android:label="Map"></activity>
     </application>
 
 </manifest>
